--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     hooks:
       - id: yamlfmt
         name: "format yml"
+        exclude: ^.config/
         args:
           - "-formatter"
           - "line_ending=lf"
